Solved layout Problems with Image Box.

--- a/assets/css/3-sections/_viewbox.sass
+++ b/assets/css/3-sections/_viewbox.sass
@@ -4,20 +4,20 @@
 section.image-view-box
   display: none
   position: fixed
-  height: 100%
-  width: 100%
   background-color: #111
   top: 0px
+  right: 0px
+  bottom: 0px
   left: 0px
+
   z-index: 2
 
   .icon
-    position: relative
     z-index: 4
     +size(40px)
-    margin: auto
-    opacity: 0.7
+    opacity: 0.5
     cursor: pointer
+    outline: none
     path
       fill: white
     &:hover
@@ -32,38 +32,75 @@ section.image-view-box
       opacity: 0.5
 
   .icon-cross
-    top: 30px
-    right: 30px
+    position: fixed
+    top: 10px
+    right: 10px
     +size(20px)
     float: right
     border: 2px solid white
     border-radius: 50%
 
   .nav-wrap
-    display: flex
-    justify-content: center
-    align-items: baseline
-    position: fixed
+    position: absolute
+    display: block
     width: 100%
-    height: auto
     bottom: 20px
+    text-align: center
+    vertical-align: middle
+
+    -webkit-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
+
+    .icon
+      display: inline-block
+      position: relative
+      border: 2px solid white
+      &:hover
+        background-color: rgba(255,255,255,0.2)
+
+
+      &.button-inactive
+        border: 2px solid grey
+        &:hover
+          background-color: transparent
+
+      &:icon-prev
+        left: 30%
+
+      &:icon-next
+        right: 30%
 
 
   .img-wrap
-    display: flex
-    justify-content: center
-    align-items: center
-    max-width: 100%
-    max-height: 90%
-    margin: 40px
-    margin-bottom: 80px
+    +position(absolute, 20px 20px 100px 20px)
 
     img
-      max-height: 90%
-      max-width: 90%
-      box-shadow: 20px 20px 10px black
+      display: inline-block
+      position: absolute
+      max-height: 100%
+      max-width: 100%
+      box-shadow: 10px 10px 10px black
+      left: 50%
+      top: 50%
+      +transform(translate(-50%, -50%))
 
-@media (max-width: 740px)
-  section.image-view-box .icon-cross
-    right: 10px
-    top: 10px
+  @media (max-width: 740px)
+    //.img-wrap
+      top: 5%
+      bottom: 5%
+      left: 5%
+      right: 5%
+    .img-wrap
+      top: 0
+      bottom: 0
+      left: 0
+      right: 0
+
+    .nav-wrap
+      display: none
+
+    .icon-cross
+      top: 0
+      right: 0
